--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+<head>
+    <meta charset="UTF-8">
+    <title>Milton's Portfolio</title>
+</head>
 
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
+<body>
+    <h1>Milton's Portfolio</h1>
+    <h2>I'm a Web Developer</h2>
+    <hr/>
+    <h3><a href="./public/mr.html">Movie Ranking Project</a></h3>
+    <img src="./assets/images/milton birthday.png" height="200"/>
+    <h3><a href="./public/bi.html">Birthday Invite</a></h3>
+    <img src="./assets/images/Screenshot 2024-02-12 012803.png" height="200"/>
+    <hr/>
+    <a href="./public/about.html">About Me</a>
+    <a href="./public/contact.html">Contact me</a>
+</body>
 
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+</html>
